# graphene_generator

./: LICENCE  MANIFEST.in  README.md  README.rst  requirements-test.txt  setup.cfg  tox.ini
graphene_generator/: holder.py
tests/: schema.py  settings.py  test_al.py  urls.py  wsgi.py
tests/apps/ingredients/: apps.py  models.py
tests/apps/ingredients/migrations/: 0001_initial.py
