[metadata]
name = graphene_generator
version = 0.1.2
description = A Graphene-Django app to generate GraphQL mutations and Queries.
long_description = file: README.rst
url = https://github.com/alainburindi/graphene_generator
author = Alain Burindi
author_email = alainburindi62@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
include_package_data = true
packages = find: